--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@react-three/fiber": "^8.13.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
+    "framer-motion": "^10.12.7",
     "next": "13.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-tilt": "^1.0.2",
     "styled-components": "^5.3.10",
     "three": "^0.152.2"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^2.1.1"
+    "babel-plugin-styled-components": "^2.1.1",
+    "next-transpile-modules": "^10.0.0"
   }
 }
