--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.9",
     "react-tilt": "^1.0.2",
     "styled-components": "^5.3.10",
     "three": "^0.152.2"
